tests/error/sndPairOfPairAndList-wrong-argument.uplc
(program 0.0.0
  [(force (builtin sndPair)) (con bytestring #012345) ]
)
